# TicTacToe

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
TicTacToe/src/: source.cpp
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
src/: .clang-format  CMakeLists.txt  game.cpp  game.h  shader.cpp  shader.h  source.cpp  stb_image.h
src/assets/: element-fshader-2.fs  element-vshader.vs  frag-shader-2.fs  grid-vshader.vs
